[package]
name = "cardinal-values"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sanbox-irl/cardinal-values"
description = "A simple library for handling cardinal directions."
categories = ["rendering::data-formats", "game-development"]


[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
